--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       </div>
     </div>
 <div class="ourmission">
-  <img src="resources\img\img-mission-background.jpg">
+<h1>testtest</h1>
 </div>
 
 <div class="teaofthemonth">
 <h2>Tea of the Month </h2>
 </div>
-
+</body>
 </html>
