image issue fixed, but header issue still present

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tea Cozy</title>
   </head>
   <body>
+    <header>
     <div class="header-containter">
       <div class="header-div">
         <img src="resources\img\img-tea-cozy-logo.png">
@@ -19,12 +20,16 @@
 
       </div>
     </div>
-<div class="ourmission">
-<h1>testtest</h1>
-</div>
+</header>
 
-<div class="teaofthemonth">
-<h2>Tea of the Month </h2>
-</div>
-</body>
+    <div class="ourmission">
+<h1> testst</h1>
+      <h1> TEST TEST </h1>
+    </div>
+
+    <div class="teaofthemonth">
+      <h2>Tea of the Month </h2>
+    </div>
+
+  </body>
 </html>
