--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 </header>
 
     <div class="ourmission">
-      <h1> testst</h1>
-      <h1> TEST TEST </h1>
+      <div class="image-textcontainer">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
     </div>
 
     <div class="teaofthemonth">
