--- a/index.html
+++ b/index.html
@@ -29,10 +29,35 @@
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
     </div>
-
-    <div class="teaofthemonth">
+    <div class="header-text">
       <h2>Tea of the Month </h2>
+      <h4>What's steeping at The Tea Cozy?</h4>
     </div>
+
+    <div class="teaofthemonth-image-container">
+        <div class="teaimages">
+          <div class="image-row-1-c-1">
+            <div class="image-text">
+              <h4>Fall Berry Blitz Tea</h4>
+            </div>
+          </div>
+        </div>
+        <div class="teaimages">
+          <div class="image-row-1-c-2">
+            <div class="image-text">
+              <h4>Spiced Rum Tea</h4>
+            </div>
+          </div>
+        </div>
+        <div class="teaimages">
+          <div class="image-row-1-c-3">
+            <div class="image-text">
+              <h4>Seasonal Donuts</h4>
+            </div>
+          </div>
+        </div>
+    </div>
+
 
   </body>
 </html>
