--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
     </div>
+
+
+    <!-- First Row -->
     <div class="header-text">
       <h2>Tea of the Month </h2>
       <h4>What's steeping at The Tea Cozy?</h4>
     </div>
-
     <div class="teaofthemonth-image-container">
         <div class="teaimages">
           <div class="image-row-1-c-1">
@@ -58,6 +60,65 @@
         </div>
     </div>
 
+    <!-- Second Row -->
+    <div class="teaofthemonth-image-container">
+        <div class="teaimages">
+          <div class="image-row-1-c-1">
+            <div class="image-text">
+              <h4>Fall Berry Blitz Tea</h4>
+            </div>
+          </div>
+        </div>
+        <div class="teaimages">
+          <div class="image-row-1-c-1">
+            <div class="image-text">
+              <h4>Fall Berry Blitz Tea</h4>
+            </div>
+          </div>
+        </div>
+    </div>
+    <!-- Locations -->
+    <div class="spacer">
+    </div>
+    <div class="locations-container">
+      <div class="locations-label">
+        <h2>Locations</h2>
+      </div>
+      <div class="locations-flex-container">
+        <div class="location-box">
+          <h3>Downtown</h3>
+          <h4>384 West 4th St</h4>
+          <h4>Suite 108</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div class="location-box">
+          <h3>East Bayside</h3>
+          <h4>3433 Phisherman's Avenue</h4>
+          <h4>(Northwest Corner)</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div class="location-box">
+          <h3>Oakdale</h3>
+          <h4>515 Crescent Avenue</h4>
+          <h4>Second Floor</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+      </div>
+    </div>
+
+    <!-- Contact -->
+    <div class="contect-text">
+      <div class="contact-container">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+    </div>
+
+    <!-- Contact -->
+    <div class="copyright">
+      copyright The Tea Cozy 2017
+    </div>
 
   </body>
 </html>
